--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@masala/parser": "^0.8.0",
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
     "core-js": "^2.6.5",
     "node-sass": "^4.12.0",
+    "parjs": "^0.10.6",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10"
   },
