--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootswatch": "^4.3.1",
     "core-js": "^2.6.5",
     "node-sass": "^4.12.0",
-    "parjs": "^0.10.6",
+    "parsimmon": "^1.12.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10"
   },
